# taskmgr-video

./: Cargo.toml  README.md  img.py  out.txt
dll/: Cargo.toml  build.rs
dll/src/: lib.rs
injector/: Cargo.toml
injector/src/: main.rs
