[package]
name = "cpu_hijack"
version = "0.1.0"
authors = ["Sebastian"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
winapi = { version = "0.3", features = ["winuser", "consoleapi", "synchapi", "xinput", "impl-default"] }
memory-rs = { git = "https://github.com/etra0/memory-rs" }

[build-dependencies]
cc = "1.0"
