[package]
name = "injector"
version = "0.1.0"
authors = ["Sebastian"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memory-rs = { git = "https://github.com/etra0/memory-rs" }
winapi = { version = "0.3", features = ["winuser", "libloaderapi", "errhandlingapi", "winbase", "impl-default"] }
